src/test/ui/const-generics/defaults/wrong-order.stderr
error: generic parameters with a default must be trailing
  --> $DIR/wrong-order.rs:1:10
   |
LL | struct A<T = u32, const N: usize> {
   |          ^

error: generic parameters with a default must be trailing
  --> $DIR/wrong-order.rs:6:18
   |
LL | struct Foo<const N: u8 = 3, T>(T);
   |                  ^

error: aborting due to 2 previous errors

